style.css
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "Courier New", Courier, monospace;
  font-weight: 700;
  height: 98vh;
}

#list-of-books {
  display: flex;
  flex-direction: column;
  width: 100%;
  border: 3px solid black;
}

.book-section {
  display: flex;
  padding: 0 10px;
  align-items: center;
}

.grey-background {
  background-color: lightgray;
}

.book-title {
  margin: 0;
}

.remove-button {
  margin-left: auto;
  height: 50%;
  background-color: white;
  font-weight: 700;
  border: 3px solid black;
}

.form-heading {
  margin: 0;
}

form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 50%;
  align-items: center;
}

.form-inputs {
  box-sizing: border-box;
  font-weight: 900;
  width: 100%;
  border: 3px solid black;
}

.form-button {
  align-self: flex-end;
  width: 20%;
}

footer {
  margin-top: auto;
  width: 100%;
  text-align: center;
  border: 3px solid black;
}

